--- a/KrenkoBot/package.json
+++ b/KrenkoBot/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@types/node": "^14.14.7",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "discord.js": "^12.5.3"
   }
 }
