--- a/PotatoBot/package.json
+++ b/PotatoBot/package.json
@@ -13,5 +13,14 @@
   "devDependencies": {
     "@types/node": "^14.14.7",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "@discordjs/opus": "^0.5.0",
+    "axios": "^0.21.1",
+    "canvas": "^2.7.0",
+    "data-uri-to-buffer": "^3.0.1",
+    "discord.js": "^12.5.3",
+    "merge-images": "^2.0.0",
+    "youtube-dl-exec": "^1.2.3"
   }
 }
