--- a/SwearBot/package.json
+++ b/SwearBot/package.json
@@ -13,5 +13,9 @@
   "devDependencies": {
     "@types/node": "^14.14.7",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "@discordjs/opus": "^0.5.0",
+    "discord.js": "^12.5.3"
   }
 }
