--- a/KrenkoBot/package.json
+++ b/KrenkoBot/package.json
@@ -11,10 +11,10 @@
     "clean": "tsc --build --clean"
   },
   "devDependencies": {
-    "@types/node": "^14.14.7",
-    "typescript": "^4.0.5"
+    "@types/node": "15.0.2"
   },
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "12.5.3",
+    "typescript": "4.2.4"
   }
 }
