--- a/PotatoBot/package.json
+++ b/PotatoBot/package.json
@@ -11,14 +11,14 @@
     "clean": "tsc --build --clean"
   },
   "devDependencies": {
-    "@types/node": "^14.14.7",
-    "typescript": "^4.0.5"
+    "@types/node": "15.0.2"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.5.0",
-    "axios": "^0.21.1",
-    "canvas": "^2.7.0",
-    "discord.js": "^12.5.3",
-    "youtube-dl-exec": "^1.2.3"
+    "@discordjs/opus": "0.5.0",
+    "axios": "0.21.1",
+    "canvas": "2.7.0",
+    "discord.js": "12.5.3",
+    "typescript": "4.2.4",
+    "youtube-dl-exec": "1.2.3"
   }
 }
