--- a/SwearBot/package.json
+++ b/SwearBot/package.json
@@ -11,11 +11,11 @@
     "clean": "tsc --build --clean"
   },
   "devDependencies": {
-    "@types/node": "^14.14.7",
-    "typescript": "^4.0.5"
+    "@types/node": "15.0.2"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.5.0",
-    "discord.js": "^12.5.3"
+    "@discordjs/opus": "0.5.0",
+    "discord.js": "12.5.3",
+    "typescript": "4.2.4"
   }
 }
