--- a/SwearBot/package.json
+++ b/SwearBot/package.json
@@ -11,11 +11,7 @@
     "clean": "tsc --build --clean"
   },
   "devDependencies": {
-    "@types/node": "15.0.2"
-  },
-  "dependencies": {
-    "@discordjs/opus": "0.5.0",
-    "discord.js": "12.5.3",
+    "@types/node": "15.0.2",
     "typescript": "4.2.4"
   }
 }
