--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "potato-bot",
+  "name": "discord-bots",
   "version": "0.0.0",
-  "description": "PotatoBot",
-  "main": "app.js",
+  "description": "DiscordBots",
   "author": {
     "name": ""
   },
@@ -10,15 +9,11 @@
     "build": "tsc --build",
     "clean": "tsc --build --clean"
   },
-  "devDependencies": {
-    "@types/node": "15.0.2"
-  },
   "dependencies": {
     "@discordjs/opus": "0.5.0",
     "axios": "0.21.1",
     "canvas": "2.7.0",
     "discord.js": "12.5.3",
-    "typescript": "4.2.4",
     "youtube-dl-exec": "1.2.3"
   }
 }
