--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@discordjs/opus": "0.5.0",
     "axios": "0.21.1",
+    "bufferutil": "4.0.3",
     "canvas": "2.8.0",
     "discord.js": "12.5.3",
-    "youtube-dl-exec": "1.2.3"
+    "erlpack": "github:discord/erlpack",
+    "libsodium-wrappers": "0.7.9",
+    "utf-8-validate": "5.0.5",
+    "youtube-dl-exec": "1.2.3",
+    "zlib-sync": "0.1.7"
   }
 }
