--- a/src/PotatoBot/tsconfig.json
+++ b/src/PotatoBot/tsconfig.json
@@ -3,8 +3,9 @@
     "module": "commonjs",
     "target": "es6",
     "lib": ["es6"],
-    "sourceMap": true//,
-    //"noImplicitAny": true
+    "sourceMap": true,
+    "noImplicitAny": true,
+    "skipLibCheck": true
   },
   "exclude": [
     "node_modules"
