--- a/src/SwearBot/tsconfig.json
+++ b/src/SwearBot/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "lib": ["es6"],
-    "sourceMap": true
+    "lib": [ "es6" ],
+    "sourceMap": true,
+    "noImplicitAny": true,
+    "skipLibCheck": true
   },
   "exclude": [
     "node_modules"
