--- a/src/SwearBot/tsconfig.json
+++ b/src/SwearBot/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
-    "lib": [ "es6" ],
-    "sourceMap": true,
+    "target": "ES2020",
     "noImplicitAny": true,
-    "skipLibCheck": true
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "skipLibCheck": true //,
+    //"strict": true
+  }
 }
