--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,11 @@
      directory: "/"
      schedule:
        interval: "daily"
+       
+   - package-ecosystem: "npm"
+     directory: "/BotManager"
+     schedule:
+       interval: "daily"
 
    - package-ecosystem: "npm"
      directory: "/src/PotatoBot"
