--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "discord-bots",
-  "version": "0.0.0",
-  "description": "DiscordBots",
-  "author": {
-    "name": ""
-  },
-  "scripts": {
-    "build": "tsc --build",
-    "clean": "tsc --build --clean"
-  },
+  "name": "discordbots",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {},
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "0.5.3",
+    "@types/node": "16.0.0",
     "axios": "0.21.1",
     "bufferutil": "4.0.3",
     "canvas": "2.8.0",
     "discord.js": "12.5.3",
-    "erlpack": "github:discord/erlpack",
+    "erlpack": "0.1.3",
     "libsodium-wrappers": "0.7.9",
+    "typescript": "4.3.5",
     "utf-8-validate": "5.0.5",
     "youtube-dl-exec": "1.2.4",
     "zlib-sync": "0.1.7"
