--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "canvas": "2.8.0",
     "discord.js": "12.5.3",
     "erlpack": "0.1.3",
+    "fluent-ffmpeg": "2.1.2",
     "libsodium-wrappers": "0.7.9",
     "typescript": "4.3.5",
     "utf-8-validate": "5.0.5",
