--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint ./ --ext .ts"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "0.5.3",
-    "@types/node": "16.3.0",
     "axios": "0.21.1",
     "bufferutil": "4.0.3",
     "canvas": "2.8.0",
@@ -16,9 +17,16 @@
     "erlpack": "0.1.3",
     "fluent-ffmpeg": "2.1.2",
     "libsodium-wrappers": "0.7.9",
-    "typescript": "4.3.5",
     "utf-8-validate": "5.0.5",
     "youtube-dl-exec": "1.2.4",
     "zlib-sync": "0.1.7"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "7.30.0",
+    "eslint-plugin-node": "11.1.0",
+    "@types/node": "16.3.0",
+    "typescript": "4.3.5"
   }
 }
