--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "zlib-sync": "0.1.7"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "2.1.18",
+    "@types/node": "16.3.0",
+    "@types/ws": "7.4.6",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
     "eslint": "7.30.0",
     "eslint-plugin-node": "11.1.0",
-    "@types/node": "16.3.0",
     "typescript": "4.3.5"
   }
 }
