--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
         ],
 	"no-case-declarations": "warn",
     "@typescript-eslint/no-var-requires": "warn",
-	"no-extra-parens": "warn",
+	"no-extra-parens": "error",
 	"no-unsafe-optional-chaining": "error",
 	"complexity": ["warn", 15],
 	"default-case": "error",
