--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@discordjs/opus": "0.5.3",
     "axios": "0.21.1",
-    "bufferutil": "4.0.3",
     "canvas": "2.8.0",
     "discord.js": "12.5.3",
-    "erlpack": "0.1.3",
     "fluent-ffmpeg": "2.1.2",
+    "youtube-dl-exec": "1.2.4"
+  },
+  "optionalDependencies": {
+    "bufferutil": "4.0.3",
+    "erlpack": "0.1.3",
     "libsodium-wrappers": "0.7.9",
     "utf-8-validate": "5.0.5",
-    "youtube-dl-exec": "1.2.4",
     "zlib-sync": "0.1.7"
   },
   "devDependencies": {
