--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ES2020",
+        "target": "es2021",
         "outDir": "dist",
         "noImplicitAny": true,
         "moduleResolution": "node",
