--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "canvas": "2.8.0",
     "discord.js": "12.5.3",
     "fluent-ffmpeg": "2.1.2",
+    "mysql": "2.18.1",
     "youtube-dl-exec": "1.2.4"
   },
   "optionalDependencies": {
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "2.1.18",
+    "@types/mysql": "2.15.19",
     "@types/node": "16.3.1",
     "@types/ws": "7.4.6",
     "@typescript-eslint/eslint-plugin": "4.28.3",
