--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
         "moduleResolution": "node",
         "sourceMap": true,
     },
-    "include": ["index.ts", "src/**/*.ts"]
+    "include": ["src/**/*.ts"]
 }
