--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "0.5.3",
+    "@discordjs/voice": "0.5.5",
     "axios": "0.21.1",
     "canvas": "2.8.0",
-    "discord.js": "12.5.3",
-    "fluent-ffmpeg": "2.1.2",
+    "discord.js": "13.0.0-dev.d310e4f.1627560163",
+    "libsodium-wrappers": "0.7.9",
     "mysql": "2.18.1",
     "youtube-dl-exec": "1.2.4"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.3",
     "erlpack": "0.1.3",
-    "libsodium-wrappers": "0.7.9",
     "utf-8-validate": "5.0.5",
     "zlib-sync": "0.1.7"
   },
