--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
+        "esModuleInterop": true
     },
     "include": ["src/**/*.ts"]
 }
