--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@discordjs/voice": "0.5.5",
     "axios": "0.21.1",
     "canvas": "2.8.0",
-    "discord.js": "13.0.0-dev.d310e4f.1627560163",
+    "discord.js": "13.0.0",
     "libsodium-wrappers": "0.7.9",
     "mysql": "2.18.1",
     "youtube-dl-exec": "1.2.4"
