--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "axios": "0.21.1",
     "canvas": "2.8.0",
     "discord.js": "13.0.0",
-    "libsodium-wrappers": "0.7.9",
     "mysql": "2.18.1",
+    "tweetnacl": "1.0.3",
     "youtube-dl-exec": "1.2.4"
   },
   "optionalDependencies": {
