get ready for raspberry pi

--- a/assets/data/config.json
+++ b/assets/data/config.json
@@ -6,6 +6,7 @@
   "googleKey": "AIzaSyApcLKG8WzlWA1U2MhbtVfTNeuHZ4V0JIw",
   "tenorKey": "GF0D7PN2BYU7",
   "sqlPass": "&n2huxU9bBpJT7LT3cXH5rc^R32EU4qM",
+  "data": "D:/Bot Resources",
   "potatoStatus": [
     "Eating a baked potato",
     "Farming potatoes",
