--- a/assets/data/config.json
+++ b/assets/data/config.json
@@ -5,6 +5,8 @@
   "yeetKey": "ODUzNjc5ODc2NDI2MDM5MzM2.YMY5Vw.zxxboSAtq1DSFwBGlBBJPXnrjIg",
   "googleKey": "AIzaSyApcLKG8WzlWA1U2MhbtVfTNeuHZ4V0JIw",
   "tenorKey": "GF0D7PN2BYU7",
+  "abstractKey": "6f0bb3d7e98d4430bf0b8e2585027f9b",
+  "weatherKey": "891e59ac427b4c0baaa43052211109",
   "sqlPass": "&n2huxU9bBpJT7LT3cXH5rc^R32EU4qM",
   "data": "D:/Bot Resources",
   "potatoStatus": [
