--- a/package.json
+++ b/package.json
@@ -17,13 +17,9 @@
     "discord.js": "13.1.0",
     "mysql": "2.18.1",
     "tweetnacl": "1.0.3",
-    "youtube-dl-exec": "1.2.13"
-  },
-  "optionalDependencies": {
+    "youtube-dl-exec": "1.2.13",
     "bufferutil": "4.0.4",
-    "erlpack": "0.1.3",
-    "utf-8-validate": "5.0.6",
-    "zlib-sync": "0.1.7"
+    "utf-8-validate": "5.0.6"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "2.1.18",
