--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@discordjs/opus": "0.6.0",
     "@discordjs/voice": "0.6.0",
     "axios": "0.22.0",
+    "bufferutil": "4.0.4",
     "canvas": "2.8.0",
-    "discord.js": "13.1.0",
+    "discord.js": "13.2.0",
     "mysql": "2.18.1",
     "tweetnacl": "1.0.3",
-    "youtube-dl-exec": "1.2.14",
-    "bufferutil": "4.0.4",
-    "utf-8-validate": "5.0.6"
+    "utf-8-validate": "5.0.6",
+    "youtube-dl-exec": "1.2.14"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "2.1.18",
