--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mysql": "2.18.1",
     "tweetnacl": "1.0.3",
     "utf-8-validate": "5.0.7",
-    "youtube-dl-exec": "1.3.2"
+    "ytdl-core": "4.9.1",
+    "ytpl": "2.2.3"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "2.1.18",
