--- a/assets/data/config.json
+++ b/assets/data/config.json
@@ -1,13 +1,6 @@
 {
-  "potatoKey": "NzgzMTIxNjk1MjQyMTkwODQ4.X8WI6Q.Y_njAUT2hW9XwcssQFlnFB2gg2s",
-  "swearKey": "Nzk0NzEwNzkwMTE1OTUwNjAz.X--yGQ.q-3S8VuKsxFHxdVg5MOz593RV8I",
-  "krenkoKey": "NzgzMDkxOTE3NzA1MTgzMjMz.X8VtLg.fevpRLh1K9Y5Jt-P9rFWmDU2sso",
-  "yeetKey": "ODUzNjc5ODc2NDI2MDM5MzM2.YMY5Vw.zxxboSAtq1DSFwBGlBBJPXnrjIg",
-  "googleKey": "AIzaSyApcLKG8WzlWA1U2MhbtVfTNeuHZ4V0JIw",
-  "tenorKey": "GF0D7PN2BYU7",
-  "abstractKey": "6f0bb3d7e98d4430bf0b8e2585027f9b",
-  "weatherKey": "891e59ac427b4c0baaa43052211109",
-  "sqlPass": "&n2huxU9bBpJT7LT3cXH5rc^R32EU4qM",
+  "admin": "609826125501169723",
+  "swear": "633046187506794527",
   "data": "D:/Bot Resources",
   "potatoStatus": [
     "Eating a baked potato",
