--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discordbots",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint ./ --ext .ts",
     "build": "tsc"
