--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint ./ --ext .ts",
-    "build": "tsc"
+    "build": "tsc",
+    "installDev": "npm i"
   },
   "author": "",
   "license": "ISC",
