--- a/package.json
+++ b/package.json
@@ -6,29 +6,30 @@
   "scripts": {
     "lint": "eslint ./ --ext .ts",
     "build": "tsc",
-    "installDev": "npm ci"
+    "installDev": "npm i"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "0.6.0",
     "@discordjs/voice": "0.7.2",
+    "@types/mysql": "2.15.19",
+    "@types/node": "16.11.6",
     "axios": "0.24.0",
     "bufferutil": "4.0.5",
     "canvas": "2.8.0",
     "discord.js": "13.3.1",
+    "fuse.js": "6.4.6",
     "mysql": "2.18.1",
     "tweetnacl": "1.0.3",
+    "typescript": "4.4.4",
     "utf-8-validate": "5.0.7",
     "ytdl-core": "4.9.1",
     "ytpl": "2.2.3"
   },
   "devDependencies": {
-    "@types/mysql": "2.15.19",
-    "@types/node": "16.11.6",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "eslint": "8.1.0",
-    "typescript": "4.4.4"
+    "eslint": "8.1.0"
   }
 }
