--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "typescript": "4.4.4",
     "utf-8-validate": "5.0.7",
     "ytdl-core": "4.9.1",
-    "ytpl": "2.2.3"
+    "ytpl": "2.2.3",
+    "ytsr": "3.5.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
     "eslint": "8.2.0"
   }
 }
