--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@discordjs/voice": "0.7.5",
     "@types/mysql": "2.15.19",
     "@types/node": "16.11.7",
-    "axios": "0.24.0",
     "bufferutil": "4.0.5",
     "canvas": "2.8.0",
     "discord.js": "13.3.1",
@@ -23,14 +22,15 @@
     "mysql": "2.18.1",
     "tweetnacl": "1.0.3",
     "typescript": "4.4.4",
+    "undici": "4.10.0",
     "utf-8-validate": "5.0.7",
     "ytdl-core": "4.9.1",
     "ytpl": "2.2.3",
     "ytsr": "3.5.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.3.1",
-    "@typescript-eslint/parser": "5.3.1",
+    "@typescript-eslint/eslint-plugin": "5.4.0",
+    "@typescript-eslint/parser": "5.4.0",
     "eslint": "8.2.0"
   }
 }
