--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ./ --ext .ts",
     "build": "tsc",
-    "installDev": "npm i"
+    "update": "npm i"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,7 @@
     "@discordjs/opus": "0.7.0",
     "@discordjs/voice": "0.7.5",
     "@types/mysql": "2.15.19",
-    "@types/node": "16.11.9",
+    "@types/node": "16.11.10",
     "bufferutil": "4.0.5",
     "canvas": "2.8.0",
     "discord.js": "13.3.1",
@@ -22,7 +22,7 @@
     "mysql": "2.18.1",
     "tweetnacl": "1.0.3",
     "typescript": "4.5.2",
-    "undici": "4.10.2",
+    "undici": "4.10.3",
     "utf-8-validate": "5.0.7",
     "ytdl-core": "4.9.1",
     "ytpl": "2.2.3",
@@ -31,6 +31,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
-    "eslint": "8.2.0"
+    "eslint": "8.3.0"
   }
 }
