--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
         "sourceMap": true,
         "esModuleInterop": true
     },
-    "include": ["src/**/*.ts"]
+    "include": ["src/**/*.ts"],
+    "exclude": ["src/core/modules/games/Euchre.ts"]
 }
