--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
   "dependencies": {
     "@discordjs/opus": "0.7.0",
     "@discordjs/voice": "0.7.5",
-    "@types/mysql": "2.15.19",
     "@types/node": "16.11.11",
     "bufferutil": "4.0.5",
     "canvas": "2.8.0",
     "discord.js": "13.3.1",
     "fuse.js": "6.4.6",
-    "mysql": "2.18.1",
+    "mongodb": "4.2.1",
     "tweetnacl": "1.0.3",
     "typescript": "4.5.2",
     "undici": "4.10.4",
