--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           
-      - run: npm ci
+      - run: npm ci --no-optional
       - run: npm run build
       - run: npm run lint
       
