--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "@discordjs/opus": "0.7.0",
     "@discordjs/voice": "0.7.5",
     "@types/node": "16.11.11",
-    "bufferutil": "4.0.5",
     "canvas": "2.8.0",
     "discord.js": "13.3.1",
     "fuse.js": "6.4.6",
     "mongodb": "4.2.1",
-    "tweetnacl": "1.0.3",
+    "sodium": "3.0.2",
     "typescript": "4.5.2",
     "undici": "4.10.4",
-    "utf-8-validate": "5.0.7",
     "ytdl-core": "4.9.1",
     "ytpl": "2.2.3",
     "ytsr": "3.5.3"
@@ -31,5 +29,11 @@
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
     "eslint": "8.3.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "4.0.5",
+    "erlpack": "github:discord/erlpack",
+    "utf-8-validate": "5.0.7",
+    "zlib-sync": "0.1.7"
   }
 }
