--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "discord.js": "13.3.1",
     "fuse.js": "6.4.6",
     "mongodb": "4.2.1",
-    "sodium": "3.0.2",
+    "tweetnacl": "1.0.3",
     "typescript": "4.5.2",
-    "undici": "4.10.4",
+    "undici": "4.11.0",
     "ytdl-core": "4.9.1",
     "ytpl": "2.2.3",
     "ytsr": "3.5.3"
