--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "discord.js": "13.3.1",
     "fuse.js": "6.4.6",
     "mongodb": "4.2.1",
-    "tweetnacl": "1.0.3",
+    "sodium": "^3.0.2",
     "typescript": "4.5.2",
     "undici": "4.11.0",
     "ytdl-core": "4.9.1",
@@ -32,7 +32,6 @@
   },
   "optionalDependencies": {
     "bufferutil": "4.0.5",
-    "erlpack": "github:discord/erlpack",
     "utf-8-validate": "5.0.7",
     "zlib-sync": "0.1.7"
   }
