--- a/package.json
+++ b/package.json
@@ -5,30 +5,33 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint ./ --ext .ts",
-    "build": "tsc",
-    "update": "npm i"
+    "build": "tsc"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "0.7.0",
     "@discordjs/voice": "0.7.5",
-    "@types/node": "16.11.12",
+    "@types/node": "16.11.13",
     "canvas": "2.8.0",
+    "dargs": "8.1.0",
     "discord.js": "13.3.1",
+    "execa": "6.0.0",
     "fuse.js": "6.4.6",
-    "mongodb": "4.2.1",
     "sodium": "3.0.2",
-    "typescript": "4.5.3",
-    "undici": "4.11.3",
-    "ytdl-core": "4.9.1",
+    "mongodb": "4.2.2",
+    "typescript": "4.5.4",
+    "undici": "4.12.0",
     "ytpl": "2.2.3",
     "ytsr": "3.5.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.6.0",
-    "@typescript-eslint/parser": "5.6.0",
-    "eslint": "8.4.1"
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
+    "eslint": "8.4.1",
+    "eslint-import-resolver-typescript": "2.5.0",
+    "eslint-plugin-import": "2.25.3"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.5",
