--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sodium": "3.0.2",
     "typescript": "4.5.4",
     "undici": "4.12.1",
+    "ytpl": "2.2.3",
     "ytsr": "3.5.3"
   },
   "devDependencies": {
