--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "scripts": {
     "lint": "eslint ./ --ext .ts",
+    "fix": "eslint ./ --ext .ts --fix",
     "build": "tsc"
   },
   "type": "module",
-  "author": "",
+  "author": "J164",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "0.7.0",
     "@discordjs/voice": "0.7.5",
     "@types/node": "17.0.8",
     "canvas": "2.8.0",
-    "discord.js": "13.5.1",
+    "discord.js": "13.6.0",
     "dotenv": "10.0.0",
     "fuse.js": "6.5.3",
     "mongodb": "4.3.0",
@@ -25,8 +26,8 @@
     "ytsr": "3.5.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.9.0",
-    "@typescript-eslint/parser": "5.9.0",
+    "@typescript-eslint/eslint-plugin": "5.9.1",
+    "@typescript-eslint/parser": "5.9.1",
     "eslint": "8.6.0",
     "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-import": "2.25.4",
