--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "14.1.0",
     "fuse.js": "6.5.3",
     "mongodb": "4.3.0",
-    "tweetnacl": "1.0.3",
+    "sodium": "3.0.2",
     "typescript": "4.5.4",
     "undici": "4.12.2",
     "ytpl": "2.2.3",
