--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "optionalDependencies": {
     "bufferutil": "4.0.6",
-    "utf-8-validate": "5.0.8",
-    "zlib-sync": "0.1.7"
+    "erlpack": "github:discord/erlpack",
+    "utf-8-validate": "5.0.8"
   }
 }
