--- a/package.json
+++ b/package.json
@@ -13,29 +13,28 @@
   "dependencies": {
     "@discordjs/opus": "0.7.0",
     "@discordjs/voice": "0.8.0",
-    "@types/node": "17.0.13",
+    "@types/node": "17.0.14",
     "canvas": "2.9.0",
     "discord.js": "13.6.0",
-    "dotenv": "14.3.2",
     "fuse.js": "6.5.3",
     "mongodb": "4.3.1",
     "sodium": "3.0.2",
     "typescript": "4.5.5",
-    "undici": "4.12.2",
+    "undici": "4.13.0",
     "ytpl": "2.2.3",
     "ytsr": "3.6.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.10.1",
-    "@typescript-eslint/parser": "5.10.1",
-    "eslint": "8.7.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "eslint": "8.8.0",
     "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-unicorn": "40.1.0"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.6",
-    "zlib-sync": "0.1.7",
-    "utf-8-validate": "5.0.8"
+    "utf-8-validate": "5.0.8",
+    "zlib-sync": "0.1.7"
   }
 }
