--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "lint": "eslint ./ --ext .ts",
     "fix": "eslint ./ --ext .ts --fix",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "node ./tests/runtests.js"
   },
   "type": "module",
   "author": "J164",
@@ -13,23 +14,21 @@
   "dependencies": {
     "@discordjs/opus": "0.7.0",
     "@discordjs/voice": "0.8.0",
-    "@types/node": "17.0.14",
+    "@types/node": "17.0.17",
     "canvas": "2.9.0",
     "discord.js": "13.6.0",
     "fuse.js": "6.5.3",
     "mongodb": "4.3.1",
     "sodium": "3.0.2",
     "typescript": "4.5.5",
-    "undici": "4.13.0",
+    "undici": "4.14.1",
     "ytpl": "2.2.3",
     "ytsr": "3.6.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
-    "eslint": "8.8.0",
-    "eslint-import-resolver-typescript": "2.5.0",
-    "eslint-plugin-import": "2.25.4",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
+    "eslint": "8.9.0",
     "eslint-plugin-unicorn": "40.1.0"
   },
   "optionalDependencies": {
