--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Brotli==1.0.9
 certifi==2021.10.8
 distlib==0.3.4
 filelock==3.4.2
@@ -9,4 +10,4 @@ six==1.16.0
 virtualenv==20.13.0
 virtualenv-clone==0.5.7
 websockets==10.1
-yt-dlp==2022.1.21
+yt-dlp==2022.3.8.1
