--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "@discordjs/opus": "0.7.0",
     "@discordjs/voice": "0.8.0",
-    "canvas": "2.9.0",
+    "@napi-rs/canvas": "0.1.21",
     "@types/node": "17.0.21",
     "discord.js": "13.6.0",
     "fuse.js": "6.5.3",
     "mongodb": "4.4.1",
     "sodium": "3.0.2",
-    "typescript": "4.5.5",
+    "typescript": "4.6.2",
     "undici": "4.15.1",
     "ytpl": "2.3.0",
     "ytsr": "3.6.0"
