--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@napi-rs/canvas": "0.1.21",
     "discord.js": "13.6.0",
     "fuse.js": "6.5.3",
-    "mongodb": "4.4.1",
+    "mongodb": "4.5.0",
     "node-cron": "3.0.0",
-    "tweetnacl": "1.0.3",
-    "undici": "4.16.0",
+    "sodium": "3.0.2",
+    "undici": "5.0.0",
     "ytpl": "2.3.0",
     "ytsr": "3.6.0",
-    "discord-api-types": "0.30.0",
+    "discord-api-types": "0.31.0",
     "typescript": "4.6.3",
     "@types/node": "17.0.23",
     "@types/node-cron": "3.0.1",
@@ -32,18 +32,18 @@
   },
   "devDependencies": {
     "@discordjs/rest": "0.3.0",
-    "@babel/core": "7.17.8",
+    "@babel/core": "7.17.9",
     "@babel/preset-env": "7.16.11",
     "@babel/preset-typescript": "7.16.7",
     "@shelf/jest-mongodb": "2.2.1",
     "@types/jest": "27.4.1",
-    "@typescript-eslint/eslint-plugin": "5.16.0",
-    "@typescript-eslint/parser": "5.16.0",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "babel-jest": "27.5.1",
     "eslint": "8.12.0",
-    "eslint-plugin-unicorn": "41.0.1",
+    "eslint-plugin-unicorn": "42.0.0",
     "jest": "27.5.1",
-    "prettier": "2.6.1"
+    "prettier": "2.6.2"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.6",
