--- a/package.json
+++ b/package.json
@@ -14,33 +14,32 @@
   "type": "module",
   "dependencies": {
     "@discordjs/opus": "0.7.0",
-    "@discordjs/voice": "0.8.0",
+    "@discordjs/voice": "0.9.0",
     "@napi-rs/canvas": "0.1.21",
     "discord.js": "13.6.0",
     "fuse.js": "6.5.3",
     "mongodb": "4.5.0",
     "node-cron": "3.0.0",
-    "sodium": "3.0.2",
+    "sodium-native": "3.3.0",
     "undici": "5.0.0",
     "ytpl": "2.3.0",
-    "ytsr": "3.6.0",
-    "discord-api-types": "0.31.0",
+    "ytsr": "3.7.0",
+    "discord-api-types": "0.31.1",
     "typescript": "4.6.3",
-    "@types/node": "17.0.23",
-    "@types/node-cron": "3.0.1",
-    "pm2": "5.2.0"
+    "@types/node": "17.0.24",
+    "@types/node-cron": "3.0.1"
   },
   "devDependencies": {
-    "@discordjs/rest": "0.3.0",
+    "@discordjs/rest": "0.4.1",
     "@babel/core": "7.17.9",
     "@babel/preset-env": "7.16.11",
     "@babel/preset-typescript": "7.16.7",
     "@shelf/jest-mongodb": "2.2.1",
     "@types/jest": "27.4.1",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
     "babel-jest": "27.5.1",
-    "eslint": "8.12.0",
+    "eslint": "8.13.0",
     "eslint-plugin-unicorn": "42.0.0",
     "jest": "27.5.1",
     "prettier": "2.6.2"
