--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "mongodb": "4.5.0",
     "node-cron": "3.0.0",
     "sodium-native": "3.3.0",
-    "undici": "5.0.0",
+    "node-fetch": "3.2.3",
     "ytpl": "2.3.0",
     "ytsr": "3.7.0",
-    "discord-api-types": "0.31.1",
+    "discord-api-types": "0.31.2",
     "typescript": "4.6.3",
-    "@types/node": "17.0.24",
+    "@types/node": "17.0.25",
     "@types/node-cron": "3.0.1"
   },
   "devDependencies": {
@@ -36,8 +36,8 @@
     "@babel/preset-typescript": "7.16.7",
     "@shelf/jest-mongodb": "2.2.1",
     "@types/jest": "27.4.1",
-    "@typescript-eslint/eslint-plugin": "5.19.0",
-    "@typescript-eslint/parser": "5.19.0",
+    "@typescript-eslint/eslint-plugin": "5.20.0",
+    "@typescript-eslint/parser": "5.20.0",
     "babel-jest": "27.5.1",
     "eslint": "8.13.0",
     "eslint-plugin-unicorn": "42.0.0",
