--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "discord.js": "13.6.0",
     "fuse.js": "6.5.3",
     "mongodb": "4.4.1",
-    "sodium": "3.0.2",
+    "sodium-native": "3.3.0",
     "typescript": "4.6.2",
     "undici": "4.15.1",
     "ytpl": "2.3.0",
