--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,23 +4,35 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:unicorn/recommended"],
-  "plugins": ["unicorn"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:unicorn/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "project": ["tsconfig.json"]
+  },
+  "plugins": ["@typescript-eslint", "unicorn"],
   "rules": {
     "complexity": ["warn", 20],
     "eqeqeq": "error",
-    "no-invalid-this": "error",
-    "no-mixed-spaces-and-tabs": "off",
-    "no-restricted-globals": ["error", "process", "setTimeout", "setInterval", "Buffer"],
+    "no-restricted-globals": ["error", "process", "setTimeout", "setInterval", "Buffer", "console"],
     "no-return-await": "error",
     "no-warning-comments": "warn",
-    "no-useless-return": "error",
     "no-var": "error",
     "prefer-const": "error",
     "yoda": "error",
 
+    "@typescript-eslint/no-extra-semi": "off",
+    "@typescript-eslint/no-misused-promises": ["error", { "checksVoidReturn": false }],
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/prefer-readonly": "error",
     "unicorn/consistent-function-scoping": "off",
     "unicorn/no-await-expression-member": "off",
+    "unicorn/no-null": "off",
     "unicorn/number-literal-case": "off"
   }
 }
