--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "potatobot",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "A Discord Music Bot with some extra utilities",
   "author": "J164",
   "license": "MIT",
@@ -9,38 +9,35 @@
   "repository": "github:J164/PotatoBot",
   "bugs": "https://github.com/J164/PotatoBot/issues",
   "engines": {
-    "node": ">=16.14.0"
+    "node": ">=18.2.0"
   },
   "type": "module",
   "dependencies": {
     "@discordjs/opus": "0.7.0",
-    "@discordjs/voice": "0.9.0",
+    "@discordjs/voice": "0.10.0-dev.1653480254-68d5169",
     "@napi-rs/canvas": "0.1.21",
-    "discord.js": "13.6.0",
-    "fuse.js": "6.5.3",
-    "mongodb": "4.5.0",
+    "@types/node": "17.0.38",
+    "@types/node-cron": "3.0.1",
+    "discord-api-types": "0.33.1",
+    "discord.js": "14.0.0-dev.1653480262-68d5169",
+    "fuse.js": "6.6.2",
+    "mongodb": "4.6.0",
     "node-cron": "3.0.0",
+    "pino": "8.0.0",
+    "pino-pretty": "8.0.0",
     "sodium-native": "3.3.0",
-    "node-fetch": "3.2.4",
+    "typescript": "4.7.2",
     "ytpl": "2.3.0",
-    "ytsr": "3.7.0",
-    "discord-api-types": "0.32.0",
-    "typescript": "4.6.3",
-    "@types/node": "17.0.29",
-    "@types/node-cron": "3.0.1"
+    "ytsr": "3.8.0"
   },
   "devDependencies": {
-    "@discordjs/rest": "0.4.1",
-    "@babel/core": "7.17.9",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-typescript": "7.16.7",
-    "@types/jest": "27.4.1",
-    "@typescript-eslint/eslint-plugin": "5.21.0",
-    "@typescript-eslint/parser": "5.21.0",
-    "babel-jest": "28.0.2",
-    "eslint": "8.14.0",
+    "@discordjs/rest": "0.5.0-dev.1653480262-68d5169",
+    "@typescript-eslint/eslint-plugin": "5.27.0",
+    "@typescript-eslint/parser": "5.27.0",
+    "ava": "4.2.0",
+    "c8": "7.11.3",
+    "eslint": "8.16.0",
     "eslint-plugin-unicorn": "42.0.0",
-    "jest": "28.0.2",
     "prettier": "2.6.2"
   },
   "optionalDependencies": {
@@ -49,25 +46,24 @@
     "utf-8-validate": "5.0.9",
     "zlib-sync": "0.1.7"
   },
-  "jest": {
-    "clearMocks": true,
-    "testTimeout": 300000,
-    "collectCoverage": true,
-    "coverageDirectory": "coverage",
-    "roots": [
-      "test",
-      "dist"
+  "ava": {
+    "files": [
+      "dist/test/**/*.test.js"
     ],
-    "collectCoverageFrom": [
-      "dist/**/*.js"
+    "nodeArguments": [
+      "--experimental-json-modules"
     ]
+  },
+  "c8": {
+    "src": "src/",
+    "all": true
   },
   "scripts": {
     "lint": "eslint ./ --ext .ts && npx prettier --check .",
     "fix": "eslint ./ --ext .ts --fix",
     "build": "tsc",
-    "test": "jest",
+    "test": "c8 ava",
     "prettier": "npx prettier --write .",
-    "deploy": "node deploy.js"
+    "deploy": "node dist/src/deploy.js"
   }
 }
