--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     "module": "ESNext",
-    "target": "ES2022",
-    "outDir": "dist",
-    "noImplicitAny": true,
+    "target": "ESNext",
     "moduleResolution": "node",
+    "outDir": "dist",
+    "strict": true,
     "sourceMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["**/*.ts"]
 }
