--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
   "type": "module",
   "dependencies": {
     "@discordjs/opus": "0.7.0",
-    "@discordjs/voice": "0.10.0-dev.1653480254-68d5169",
-    "@napi-rs/canvas": "0.1.21",
-    "@types/node": "17.0.38",
+    "@discordjs/voice": "0.10.0",
+    "@napi-rs/canvas": "0.1.22",
+    "@types/node": "17.0.41",
     "@types/node-cron": "3.0.1",
-    "discord-api-types": "0.33.1",
-    "discord.js": "14.0.0-dev.1653480262-68d5169",
+    "discord-api-types": "0.33.5",
+    "discord.js": "14.0.0-dev.1654776344-94bdcac",
     "fuse.js": "6.6.2",
-    "mongodb": "4.6.0",
-    "node-cron": "3.0.0",
+    "mongodb": "4.7.0",
+    "node-cron": "3.0.1",
     "pino": "8.0.0",
     "pino-pretty": "8.0.0",
     "sodium-native": "3.3.0",
-    "typescript": "4.7.2",
+    "typescript": "4.7.3",
     "ytpl": "2.3.0",
     "ytsr": "3.8.0"
   },
   "devDependencies": {
-    "@discordjs/rest": "0.5.0-dev.1653480262-68d5169",
-    "@typescript-eslint/eslint-plugin": "5.27.0",
-    "@typescript-eslint/parser": "5.27.0",
-    "ava": "4.2.0",
+    "@discordjs/rest": "0.5.0",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
+    "ava": "4.3.0",
     "c8": "7.11.3",
-    "eslint": "8.16.0",
+    "eslint": "8.17.0",
     "eslint-plugin-unicorn": "42.0.0",
     "prettier": "2.6.2"
   },
