--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
   },
   "type": "module",
   "dependencies": {
-    "@discordjs/opus": "0.7.0",
-    "@discordjs/voice": "0.10.0",
-    "@napi-rs/canvas": "0.1.22",
-    "@types/node": "17.0.41",
-    "@types/node-cron": "3.0.1",
-    "discord-api-types": "0.33.5",
-    "discord.js": "14.0.0-dev.1654776344-94bdcac",
+    "@discordjs/opus": "0.8.0",
+    "@discordjs/voice": "0.11.0",
+    "@napi-rs/canvas": "0.1.25",
+    "@types/node": "18.0.6",
+    "@types/node-cron": "3.0.2",
+    "discord-api-types": "0.36.3",
+    "discord.js": "14.0.3",
     "fuse.js": "6.6.2",
-    "mongodb": "4.7.0",
+    "mongodb": "4.8.0",
     "node-cron": "3.0.1",
-    "pino": "8.0.0",
-    "pino-pretty": "8.0.0",
+    "pino": "8.3.0",
+    "pino-pretty": "8.1.0",
     "sodium-native": "3.3.0",
-    "typescript": "4.7.3",
+    "typescript": "4.7.4",
     "ytpl": "2.3.0",
     "ytsr": "3.8.0"
   },
   "devDependencies": {
-    "@discordjs/rest": "0.5.0",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
-    "ava": "4.3.0",
-    "c8": "7.11.3",
-    "eslint": "8.17.0",
+    "@discordjs/rest": "1.0.0",
+    "@typescript-eslint/eslint-plugin": "5.30.7",
+    "@typescript-eslint/parser": "5.30.7",
+    "ava": "4.3.1",
+    "c8": "7.12.0",
+    "eslint": "8.20.0",
     "eslint-plugin-unicorn": "42.0.0",
-    "prettier": "2.6.2"
+    "prettier": "2.7.1"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.6",
