--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/prefer-readonly": "error",
     "unicorn/consistent-function-scoping": "off",
     "unicorn/no-await-expression-member": "off",
+    "unicorn/no-nested-ternary": "off",
     "unicorn/no-null": "off",
     "unicorn/number-literal-case": "off"
   }
