--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - run: alias python3=python
-      - run: python -m pip install -r requirements.txt
+      - run: chmod +x install.sh
 
-      - run: npm i
+      - run: ./install.sh
       - run: npm run lint
       - run: npm run build
       - run: npm run test
