--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - run: alias python3=python
-      - run: python -m pip install -r requirements.txt
+      - run: ./install.sh
 
       - run: yarn install --immutable --ignore-optional
       - run: yarn run lint
