--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "engines": {
     "node": ">=18.12.0"
   },
+  "private": true,
   "type": "module",
   "dependencies": {
     "@discordjs/opus": "0.9.0",
     "@discordjs/voice": "0.11.0",
     "discord.js": "14.6.0",
-    "dotenv": "16.0.3",
-    "mongodb": "4.11.0",
+    "mongodb": "4.12.0",
     "node-cron": "3.0.2",
     "pino": "8.7.0",
     "sharp": "0.31.2",
@@ -25,12 +25,12 @@
   "devDependencies": {
     "@discordjs/rest": "1.3.0",
     "@types/node": "18.11.9",
-    "@types/node-cron": "3.0.5",
+    "@types/node-cron": "3.0.6",
     "@types/sharp": "0.31.0",
-    "discord-api-types": "0.37.17",
+    "discord-api-types": "0.37.18",
     "rimraf": "3.0.2",
-    "typescript": "4.8.4",
-    "xo": "0.52.4"
+    "typescript": "4.9.3",
+    "xo": "0.53.0"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.7",
