--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@discordjs/opus": "0.9.0",
     "@discordjs/voice": "0.11.0",
     "discord.js": "14.6.0",
+    "dropbox": "10.34.0",
     "mongodb": "4.12.0",
     "node-cron": "3.0.2",
     "pino": "8.7.0",
